# commit-message

./: .gitignore  Cargo.toml  README.md  conventional_commits.txt
openspec/: project.md
openspec/changes/archive/2025-11-19-improve-commit-message-generation/: proposal.md  tasks.md
openspec/changes/archive/2025-11-19-improve-commit-message-generation/specs/commit-message-generation/: spec.md
openspec/specs/commit-message-generation/: spec.md
src/: config.rs  emoji.rs  git.rs  main.rs  message.rs  prompt.rs
src/provider/: gemini.rs  mod.rs  openrouter.rs
src/ui/: message_box.rs  mod.rs
